# dev_bestia_cargo_completion

./: .auto_version_from_date.json  .automation_tasks_rs_file_hashes.json  .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  RELEASES.md  temp11.txt
.github/workflows/: rust_fmt_auto_build_test.yml
automation_tasks_rs/: .file_hashes.json  .gitignore  Cargo.toml  README.md
automation_tasks_rs/src/: build_cli_bin_mod.rs  build_lib_mod.rs  cargo_auto_github_api_mod.rs  generic_functions_mod.rs  main.rs  secrets_always_local_mod.rs
automation_tasks_rs/src/encrypt_decrypt_with_ssh_key_mod/: crates_io_api_token_mod.rs  encrypt_decrypt_mod.rs  github_api_token_with_oauth2_mod.rs  mod.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js  tidy_warnings.txt
docs/dev_bestia_cargo_completion/: all.html  fn.main.html  index.html
docs/dev_bestia_cargo_completion_lib/: all.html  fn.complete_automation.html  fn.complete_cargo_auto.html  fn.complete_cargo_build_partial.html  fn.complete_cargo_partial.html  index.html  sidebar-items.js
docs/search.desc/dev_bestia_cargo_completion/: dev_bestia_cargo_completion-desc-0-.js
docs/search.desc/dev_bestia_cargo_completion_lib/: dev_bestia_cargo_completion_lib-desc-0-.js
docs/src/dev_bestia_cargo_completion/: main.rs.html
docs/src/dev_bestia_cargo_completion_lib/: lib.rs.html
src/: lib.rs  main.rs
