[package]
name = "dev_bestia_cargo_completion"
version = "2023.531.1119"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "Full auto-completion for cargo-auto and automation_tasks_rs and partial auto-completion for cargo  in bash"
repository = "https://github.com/bestia-dev/dev_bestia_cargo_completion"
readme = "README.md"
license = "MIT"
keywords = ["rust", "make"]
categories = ["development-tools::build-utils"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

[dependencies]
unwrap = "1.2.1"
lazy_static="1.4.0"
