[package]
name = "dev_bestia_cargo_completion"
version = "2024.421.1905"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "Auto-completion for cargo-auto and automation_tasks_rs and partial auto-completion for cargo in bash"
repository = "https://github.com/automation-tasks-rs/dev_bestia_cargo_completion"
readme = "README.md"
license = "MIT"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["maintained","ready-for-use", "rustlang","automation","workflow"]
categories = ["development-tools::build-utils"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

[dependencies]

[lib]
name = "dev_bestia_cargo_completion_lib"
path = "src/lib.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true

[[bin]]
name = "dev_bestia_cargo_completion"
path = "src/bin/dev_bestia_cargo_completion/main.rs"
# A flag for enabling documentation of this target. This is used by `cargo doc`.
doc = true
